--- a/app/views/recipe/search.html.erb
+++ b/app/views/recipe/search.html.erb
@@ -1,1 +1,20 @@
 <h1>search</h1>
+
+<table border=1>
+  <tr>
+    <th>Id</th>
+    <th>Name</th>
+    <th>categoryUrl</th>
+    <th>parentCategoryId</th>
+  </tr>
+
+  <% @result['result']['medium'].each do |i| %>
+  <tr>
+    <td><%= i['categoryId'] %></td>
+    <td><%= i['categoryName'] %></td>
+    <td><%= i['categoryUrl'] %></td>
+    <td><%= i['parentCategoryId'] %></td>
+  </tr>
+  <% end %>
+
+</table>
