--- a/app/views/recipe/list.html.erb
+++ b/app/views/recipe/list.html.erb
@@ -1,1 +1,34 @@
 <h1>list</h1>
+<!--APIから取得してたやつの名残-->
+<!--<table border=1>
+  <tr>
+    <th>Id</th>
+    <th>Name</th>
+    <th>categoryUrl</th>
+    <th>parentCategoryId</th>
+  </tr>
+<%# j=0 %>
+  <%# @result['result']['small'].each do |i| %>
+  <%# if i['categoryName']==@name then %>
+  <tr>
+    <td><%# i['categoryId'] %></td>
+    <td><%# i['categoryName'] %></td>
+    <td><a href="<%# i['categoryUrl'] %>"><%# i['categoryUrl'] %></a></td>
+    <td><%# i['parentCategoryId'] %></td>
+  </tr>
+	<%# j=j+1 %>
+  <%# end %>
+  <%# end %>
+</table>
+-->
+<!--名残の終わり-->
+
+<%= @title %> のTOP20品
+<br>
+<table border=1>
+<% for num in 1..20 do %>
+<tr>
+<td><%= @menu[num] %></td>
+</tr>
+<% end %>
+</table>
