--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Taeko</title>
-    <%= csrf_meta_tags %>
+    <meta name="keywords" content="料理,レシピ">
+    <meta name="description" content="料理意思決定支援">
+    <meta name="robots" content="noindex,nofollow">
+    <meta name="author" content="のど飴">
+    <meta name="generator" content="Frontweaver 8.2">
 
+    <title>(D3D)</title>
+
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
 
