--- a/app/views/recipe/list.html.erb
+++ b/app/views/recipe/list.html.erb
@@ -26,9 +26,10 @@
 <%= @title %> のTOP20品
 <br>
 <table border=1>
-<% for num in 1..20 do %>
+<% for num in 1..100 do %>
 <tr>
-<td><%= @menu[num] %></td>
+<td><%= @menu_other[num] %></td>
+<td><%= @material[num]%></td>
 </tr>
 <% end %>
 </table>
