KUTE.jsの導入（途中）

--- a/app/views/recipe/search.html.erb
+++ b/app/views/recipe/search.html.erb
@@ -1,4 +1,4 @@
-<h1>search<span class="label label-default">New</span></h1>
+<h1>search</h1>
 
 <%= form_tag("list", method:"get") do %>
 	<%= text_field_tag(:name) %>
