--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -10,26 +10,28 @@
     <title>だんご三兄弟</title>
 
     <%= csrf_meta_tags %>
+    <%= javascript_include_tag "application" 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_link_tag 'list/kute' %>
-    <%= javascript_include_tag "application" 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag "list/kute" 'data-turbolinks-track' => true  %>
-    <%= javascript_include_tag "list/kute.min" 'data-turbolinks-track' => true  %>
 
     <!---
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-easing.min.js"></script>
     <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-physics.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-css.min.js"></script>
     <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-svg.min.js"></script>
     <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-text.min.js"></script>
     <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-attr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/kute.js/1.6.2/kute-jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-text.min.js"></script>
     -->
   </head>
 
   <body class="list">
     <%= yield %>
   </body>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/kute.js/1.6.2/kute.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/kute.js/1.6.2/kute-css.min.js"></script>
+  <%= javascript_include_tag "list/kute" %>
 </html>
 
