--- a/app/views/recipe/list.html.erb
+++ b/app/views/recipe/list.html.erb
@@ -23,12 +23,23 @@
 -->
 <!--名残の終わり-->
 
-<%= @title %> のTOP20品
+<%#= @title %> のTOP20品
 <br>
 <table border=1>
-<% for num in 1..20 do %>
+<%# for num in 1..20 do %>
 <tr>
-<td><%= @menu[num] %></td>
+<td><%#= @menu[num] %></td>
+</tr>
+<%# end %>
+</table>
+
+<table border=1>
+<tr><th>Id</th><th>recipeTitle</th><th>parentCategoryId</th></tr>
+<% @result['result'].each do |i| %>
+<tr>	<td><%= i['recipeId'] %></td>
+	<td><%= i['recipeTitle'] %></td>
+	<td><%= i['recipeUrl'] %></td>
+	<td><%= i['foodImageUrl'] %></td>
 </tr>
 <% end %>
 </table>
