cssの細分化と全体cssの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="keywords" content="料理,レシピ">
-    <meta name="description" content="料理意思決定支援">
-    <meta name="robots" content="noindex,nofollow">
-    <meta name="author" content="のど飴">
-    <meta name="generator" content="Frontweaver 8.2">
+<head>
+  <meta name="keywords" content="料理,レシピ">
+  <meta name="description" content="料理意思決定支援">
+  <meta name="robots" content="noindex,nofollow">
+  <meta name="author" content="のど飴">
+  <meta name="generator" content="Frontweaver 8.2">
 
-    <title>(D3D)</title>
+  <title>(D3D)</title>
 
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-  </head>
+  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag 'meinstyle/mein' %>
 
-  <body>
-    <%= yield %>
-  </body>
+</head>
+<body>
+  <%= yield %>
+</body>
 </html>
