--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -8,11 +8,10 @@
     <meta name="generator" content="Frontweaver 8.2">
 
     <title>だんご三兄弟</title>
-
     <%= csrf_meta_tags %>
     <%= javascript_include_tag "application" 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_link_tag 'list/kute' %>
+    <%= stylesheet_link_tag 'meinstyle/mein' %>
 
     <!---
     <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-easing.min.js"></script>
