ランキングページ上位情報の取得

--- a/app/views/recipe/list.html.erb
+++ b/app/views/recipe/list.html.erb
@@ -9,9 +9,9 @@
 
 <div>
   <table class="recipeList">
-    <% for num in 1..20 do %>
+    <% for num in 0..99 do %>
     <tr>
-      <td><%= @menu[num] %></td>
+      <td><%= @menu_other[num] %></td>
     </tr>
     <% end %>
   </table>
