グローバル変数をローカルに

--- a/app/views/recipe/list.html.erb
+++ b/app/views/recipe/list.html.erb
@@ -16,11 +16,10 @@
   <table class="recipeList">
     <% for num in 0..99 do %>
     <tr>
-<<<<<<< HEAD
       <td><%= @titles %></td>
-=======
+
       <td><%= @menu_other[num] %></td>
->>>>>>> 00a70536d2b8465ddcfbcceee3bde9aea904e1cc
+      <td><%=@material[num]%></td>
     </tr>
     <% end %>
   </table>
