団子のデザイン設計

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="author" content="のど飴">
     <meta name="generator" content="Frontweaver 8.2">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>(D3D)</title>
 
     <%= csrf_meta_tags %>
