--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -6,23 +6,14 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="author" content="のど飴">
     <meta name="generator" content="Frontweaver 8.2">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>だんご三兄弟</title>
+    <title>料理リスト</title>
 
     <%= csrf_meta_tags %>
     <%= javascript_include_tag "application" 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= stylesheet_link_tag 'list/kute' %>
-
-    <!---
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-easing.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-physics.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-svg.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-text.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-attr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.6.2/kute-jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/kute.js/1.5.9/kute-text.min.js"></script>
-    -->
+    <%= stylesheet_link_tag 'list' %>
   </head>
 
   <body class="list">
@@ -32,6 +23,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/kute.js/1.6.2/kute.min.js"></script>
   <script src="https://cdn.jsdelivr.net/kute.js/1.6.2/kute-css.min.js"></script>
-  <%= javascript_include_tag "list/kute" %>
+  <%= javascript_include_tag "list/animation" %>
+  <%= javascript_include_tag "list/layout" %>
 </html>
-
